--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ websockets>=12.0
 pyobjc-framework-Cocoa>=10.0
 pyobjc-framework-Quartz>=10.0
 google-generativeai>=0.8.0
+openai>=1.0.0
 openwakeword>=0.5.0
 pyaudio>=0.2.14
 numpy>=1.24.0
