debug mode todo etc.

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,19 @@
 # Copy this file to .env.local and fill in your values
 
 # =============================================================================
+# Debug Mode
+# =============================================================================
+
+# Set to "true" to enable enhanced debug logging in the browser console.
+# This shows detailed logs for:
+# - Speech recognition input
+# - Vision keyword matching and routing decisions
+# - LLM prompts and responses
+# - JSON parsing of LLM output
+# - Action execution routing
+VITE_DEBUG=false
+
+# =============================================================================
 # LLM Provider Configuration
 # =============================================================================
 
@@ -21,11 +34,15 @@ LLM_MODEL=gemini-3-flash-preview
 GEMINI_API_KEY=your-gemini-api-key-here
 
 # =============================================================================
-# Ollama Cloud
+# Ollama Cloud or Local
 # =============================================================================
 
-# Get your API key from: https://ollama.com
-OLLAMA_API_KEY=2ddf1fb82738443194394641d399d3fd.CAoi9Q0GvdiPVAcIblYJALrz
+# Get your API key from: https://ollama.com (for cloud)
+# For local Ollama, the API key can be any string (e.g., "ollama")
+OLLAMA_API_KEY=your-ollama-api-key-here
 
-# Ollama API endpoint (default: https://ollama.com/v1)
+# Ollama API endpoint
+# - Cloud: https://ollama.com/v1 (default)
+# - Local: http://localhost:11434/v1 (run `ollama serve` first)
 OLLAMA_BASE_URL=https://ollama.com/v1
+
