--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,8 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# VoiceOS temp/debug files
+pdf_strings.txt
+run_log.txt
+test_backend_open.js
