--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,15 @@ OLLAMA_API_KEY=your-ollama-api-key-here
 # - Local: http://localhost:11434/v1 (run `ollama serve` first)
 OLLAMA_BASE_URL=https://ollama.com/v1
 
+# =============================================================================
+# Logging Configuration
+# =============================================================================
+
+# Frontend log level: debug, info, warn, error (default: info)
+VITE_LOG_LEVEL=debug
+
+# Backend log level: DEBUG, INFO, WARNING, ERROR (default: INFO)
+LOG_LEVEL=INFO
+
+# Log directory for file rotation (default: ./logs)
+LOG_DIR=./logs
