Usage Analytics System** - *DRAFT

--- a/.env.example
+++ b/.env.example
@@ -58,3 +58,11 @@ LOG_LEVEL=INFO
 
 # Log directory for file rotation (default: ./logs)
 LOG_DIR=./logs
+
+# =============================================================================
+# Analytics Configuration
+# =============================================================================
+
+# Enable usage analytics collection (default: false)
+# Tracks: utterance → intent → action → outcome for self-improvement
+VITE_ANALYTICS_ENABLED=true
