--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "concurrently": "^9.2.1",
     "cors": "^2.8.5",
     "express": "^5.2.1",
+    "face-api.js": "^0.22.2",
     "lucide-react": "^0.561.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
